--- a/about.html
+++ b/about.html
@@ -180,7 +180,7 @@
   </nav>
 
       <section class="breadcrumb-section">
-        <img src="assets/images/3d/b34.webp" class="breadcrumb-section-img" />
+        <img src="images/bannerssimage/7.png" class="breadcrumb-section-img" />
         <div class="bread-txt">
           <h1>About
              Us</h1>
@@ -188,7 +188,7 @@
         <div class="breadcrumb-content">
           <div aria-label="breadcrumb" class="bread">
             <ol class="breadcrumb">
-              <li class="breadcrumb-item"><a href="index.php">Home</a></li>
+              <li class="breadcrumb-item"><a href="index.html">Home</a></li>
               <li class="breadcrumb-item active" aria-current="page">
                 Contact
               </li>
