--- a/contact.html
+++ b/contact.html
@@ -180,14 +180,14 @@
 
 
       <section class="breadcrumb-section">
-        <img src="assets/images/3d/b34.webp" class="breadcrumb-section-img" />
+        <img src="images/bannerssimage/1.png" class="breadcrumb-section-img" />
         <div class="bread-txt">
           <h1>Contact Us</h1>
         </div>
         <div class="breadcrumb-content">
           <div aria-label="breadcrumb" class="bread">
             <ol class="breadcrumb">
-              <li class="breadcrumb-item"><a href="index.php">Home</a></li>
+              <li class="breadcrumb-item"><a href="index.html">Home</a></li>
               <li class="breadcrumb-item active" aria-current="page">
                 Contact
               </li>
