--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
   <div class="box"></div>
   <div class="slider-container">
       <!-- Slide 1 -->
-      <div class="slide active" style="background-image: url('images/mainbannerss.webp');">
+      <div class="slide active" style="background-image: url('images/bannerssimage/5.png');">
           <div class="info shades">
               <h6 class="smallhead">Home Decoration</h6>
               <h2>Revamp your space, mesmerize your senses</h2>
@@ -216,7 +216,7 @@
       </div>
 
       <!-- Slide 2 -->
-      <div class="slide" style="background-image: url('assets/images/3d/b50.webp');">
+      <div class="slide" style="background-image: url('images/bannerssimage/2.png');">
           <div class="info shades">
               <h6 class="smallhead">Home Decoration</h6>
               <h2>Interior design that delivers magic in every moment</h2>
@@ -231,7 +231,7 @@
       </div>
 
       <!-- Slide 3 -->
-      <div class="slide" style="background-image: url('assets/images/3d/b36.webp');">
+      <div class="slide" style="background-image: url('images/bannerssimage/6.png');">
           <div class="info shades">
               <h6 class="smallhead">Home Decoration</h6>
               <h2>Creating Spaces That Inspire</h2>
