--- a/packages.html
+++ b/packages.html
@@ -181,7 +181,7 @@
 
 
       <section class="breadcrumb-section">
-        <img src="assets/images/3d/b34.webp" class="breadcrumb-section-img" />
+        <img src="images/bannerssimage/5.png" class="breadcrumb-section-img" />
         <div class="bread-txt">
           <h1>Packages</h1>
         </div>
@@ -217,7 +217,7 @@
 <!-- Tab Content -->
 <div id="2BHK" class="tab-content">
   
-  <div class="package-box">
+  <div class="package-box" style="background-color:#f0daaf;">
       <h3>Budget Friendly</h3>
       <div class="d-flex flex-row justify-content-start">
         <div class="pt-4 pl-2">
@@ -376,7 +376,9 @@
       </div>
 
   </div>
-  <div class="package-box">
+
+
+  <div class="package-box" style="background-color:#f0daaf;">
       <h3>Value for Money</h3>
       <div class="d-flex flex-row justify-content-start pt-2">
         <div class="pb-3 pl-2 pt-3">
@@ -536,7 +538,10 @@
         <a href="contact.html" class="buy-btn text-center">Get Package Offers</a>
       </div>
   </div>
-  <div class="package-box">
+
+
+
+  <div class="package-box" style="background-color:#f0daaf;">
       <h3>End to End</h3>
       <div class="d-flex flex-row justify-content-start pt-2">
         <div class="pb-3 pl-2 pt-3">
@@ -749,10 +754,12 @@
       </div>
 
   </div>
+
+
 </div>
 
 <div id="3BHK" class="tab-content">
-  <div class="package-box">
+  <div class="package-box" style="background-color:#EDD097;">
       <h3>Budget Friendly</h3>
       <div class="d-flex flex-row justify-content-start">
         <div class="pt-4 pl-2">
@@ -947,7 +954,8 @@
       </div>
 
   </div>
-  <div class="package-box">
+
+  <div class="package-box" style="background-color:#EDD097;">
       <h3>Value for Money</h3>
       <div class="d-flex flex-row justify-content-start">
         <div class="pt-4 pl-2">
@@ -1153,7 +1161,8 @@
       </div>
 
   </div>
-  <div class="package-box">
+
+  <div class="package-box" style="background-color:#EDD097;">
       <h3>End to End</h3>
       <div class="d-flex flex-row justify-content-start">
         <div class="pt-4 pl-2">
@@ -1381,10 +1390,11 @@
       </div>
 
   </div>
+
 </div>
 
 <div id="Villa" class="tab-content">
-  <div class="package-box">
+  <div class="package-box" style="background-color:#E7C371;">
       <h3>Budget Friendly</h3>
       <div class="d-flex flex-row justify-content-start pt-4">
         <div class="pl-2">
@@ -1583,7 +1593,8 @@
       </div>
 
   </div>
-  <div class="package-box">
+
+  <div class="package-box" style="background-color:#E7C371;">
       <h3>Value for Money</h3>
       <div class="d-flex flex-row justify-content-start">
         <div class="pt-4 pl-2">
@@ -1827,7 +1838,8 @@
       </div>
 
   </div>
-  <div class="package-box">
+
+  <div class="package-box" style="background-color:#E7C371;">
       <h3>End to End</h3>
       <div class="d-flex flex-row justify-content-start">
         <div class="pt-4 pl-2">
@@ -2080,6 +2092,7 @@
       </div>
 
   </div>
+
 </div>
 
 <style>
@@ -2102,7 +2115,7 @@
   }
 
   .tab.active {
-      background-color: #1f2b7b;
+      background-color: #D19A23;
       color: white;
   }
 
