--- a/residential-services.html
+++ b/residential-services.html
@@ -182,7 +182,7 @@
 
 
       <section class="breadcrumb-section">
-        <img src="assets/images/3d/b34.webp" class="breadcrumb-section-img" />
+        <img src="images/bannerssimage/9.png" class="breadcrumb-section-img" />
         <div class="bread-txt">
           <h1>Residential Services</h1>
         </div>
