--- a/project.html
+++ b/project.html
@@ -183,16 +183,16 @@
     </nav>
 
     <section class="breadcrumb-section">
-      <img src="assets/images/3d/b34.webp" class="breadcrumb-section-img" />
+      <img src="images/bannerssimage/8.png" class="breadcrumb-section-img" />
       <div class="bread-txt">
         <h1>Projects</h1>
       </div>
      
     </section>
 
-      <h1 class="text-center main-heading">Residential</h1>
+     
 
-      <div class="gallery">
+      <div class="gallery pt-5">
         <a href="assets/images/livingroom/7ea51aa4-5200-4cab-b5e2-ac81a209891a.jpg" data-lightbox="project-gallery" data-title="Project Image 1">
             <img src="assets/images/livingroom/7ea51aa4-5200-4cab-b5e2-ac81a209891a.jpg" alt="Project Image 1" class="gallery-img">
         </a>
