--- a/contact.html
+++ b/contact.html
@@ -201,7 +201,7 @@
           <div class="col-xl-6 col-lg-6 col-md-12 col-sm-12">
             <div class="side-img-part">
               <form class="main-contact-form">
-                <h3>Contact Us</h3>
+               
                 <p>Call now for a free consultation</p>
                 <div class="mt-4">
                   <label class="form-label form-top-label">First Name*</label>
@@ -361,7 +361,7 @@
                 </div>
               </div>
               <div class="mt-5">
-                <img src="assets/images/3d/l23.webp" class="inner-contact-img" />
+                <img src="images/aboy2.png" class="inner-contact-img"/>
               </div>
             </div>
           </div>
