--- a/residential-services.html
+++ b/residential-services.html
@@ -31,9 +31,10 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap" rel="stylesheet">
-    <link rel="icon" type="image/png" href="assets/images/fav.webp">  </head>
+    <link rel="icon" type="image/png" href="assets/images/logo/3.png">  
 
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet"/>
+  </head>
   <body>
  
 
