--- a/contact.html
+++ b/contact.html
@@ -450,6 +450,11 @@
                   ><i class="bi bi-arrow-right me-2"></i>Renovation</a
                 >
               </li>
+              <li>
+                <a href="packages.html"
+                  ><i class="bi bi-arrow-right me-2"></i>Packages</a
+                >
+              </li>
               
             </ul>
 
@@ -461,7 +466,7 @@
             <h4 class="footer-heading" style="color: #D19A23;">Address</h4>
             <ul>
               <li class="address">
-                <i class="bi bi-geo-alt me-2"></i><b class="company-name-heading"></b>Hyderabad
+                <i class="bi bi-geo-alt me-2"></i><b class="company-name-heading"></b>133, Siri Arcade, 401, Old Mumbai Hwy, Lumbini Avenue, Gachibowli, Hyderabad, Telangana 500032
               </li>
               <li>
                 <a href="mailto:projects@sr.com"
