--- a/packages.html
+++ b/packages.html
@@ -2283,7 +2283,11 @@
               ><i class="bi bi-arrow-right me-2"></i>Renovation</a
             >
           </li>
-          
+          <li>
+            <a href="packages.html"
+              ><i class="bi bi-arrow-right me-2"></i>Packages</a
+            >
+          </li>
         </ul>
 
       </div>
@@ -2294,7 +2298,7 @@
         <h4 class="footer-heading" style="color: #e45c0c;">Address</h4>
         <ul>
           <li class="address">
-            <i class="bi bi-geo-alt me-2"></i><b class="company-name-heading"></b>Hyderabad
+            <i class="bi bi-geo-alt me-2"></i><b class="company-name-heading"></b>133, Siri Arcade, 401, Old Mumbai Hwy, Lumbini Avenue, Gachibowli, Hyderabad, Telangana 500032
           </li>
           <li>
             <a href="mailto:projects@sr.com"
