--- a/index.html
+++ b/index.html
@@ -720,6 +720,9 @@
           text-align: center;
           color: #fff;
       }
+      .content h1{
+        padding-top: 20px;
+      }
   /* Bubble sizes */
   .bubble-large {
           width: 300px;
