--- a/index.html
+++ b/index.html
@@ -484,8 +484,8 @@
 
     <section class="fixed-background">
       <div class="overlay">
-          <div class="content">
-              <h1>Transform Your Space With The Best Interior Designers In Hyderabad</h1>
+          <div class="content pt-3">
+              <h2 >Transform Your Space With The Best Interior Designers In Hyderabad</h2>
               <p>Your dream home is just a click away. Take the first step towards a more beautiful and functional living space....</p>
   
               <div class="form-bubble-wrapper">
@@ -543,7 +543,7 @@
           background-attachment: fixed;
           background-size: cover;
           background-position: center;
-          height: 120vh;
+          height: 100vh;
           position: relative;
          
       }
@@ -551,7 +551,7 @@
       .overlay {
           background-color: rgba(128, 128, 128, 0.5); /* Light gray RGB layer */
           width: 100%;
-          height: 100%;
+          height: 80%;
           position: absolute;
           top: 0;
           left: 0;
@@ -562,7 +562,7 @@
           flex-direction: column;
           align-items: center;
           justify-content: center;
-          height: 100%;
+          height: 80%;
           padding: 20px;
           text-align: center;
           color: #fff;
@@ -660,6 +660,8 @@
       }
   
       /* Responsive styling for mobile */
+
+   
       @media (max-width: 768px) {
           .form-bubble-wrapper {
               flex-direction: column;
@@ -720,9 +722,7 @@
           text-align: center;
           color: #fff;
       }
-      .content h1{
-        padding-top: 20px;
-      }
+  
   /* Bubble sizes */
   .bubble-large {
           width: 300px;
