--- a/commercial-services.html
+++ b/commercial-services.html
@@ -193,7 +193,7 @@
             font-family: Arial, sans-serif;
             background-color: #f9f9f9;
             margin: 0;
-            padding: 20px;
+            /* padding: 20px; */
         }
 
         .container {
