--- a/renovation-services.html
+++ b/renovation-services.html
@@ -195,7 +195,7 @@
             font-family: Arial, sans-serif;
             background-color: #f9f9f9;
             margin: 0;
-            padding: 20px;
+            /* padding: 20px; */
         }
 
         .container {
