--- a/index.html
+++ b/index.html
@@ -28,11 +28,19 @@
     />
     <link rel="stylesheet" href="assets/css/style.css" />
     <link rel="stylesheet" href="assets/css/responsive.css" />
-   
+    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap" rel="stylesheet">
     <link rel="icon" type="image/png" href="assets/images/logo/3.png">    <!-- Google tag (gtag.js) -->
+
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.0/css/all.min.css" rel="stylesheet">
+    <link href="lib/flaticon/font/flaticon.css" rel="stylesheet">
+    <link href="lib/animate/animate.min.css" rel="stylesheet">
+    <link href="lib/owlcarousel/assets/owl.carousel.min.css" rel="stylesheet">
+    <link href="lib/lightbox/css/lightbox.min.css" rel="stylesheet">
+    <link href="lib/slick/slick.css" rel="stylesheet">
+    <link href="lib/owlcarousel/assets/owl.carousel.min.css" rel="stylesheet">
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-2GFX644REZ"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
@@ -290,6 +298,272 @@
     </div>
   </div>
 </section>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+<script>
+  
+//new
+
+$(document).ready(function() {
+    setTimeout(function() {
+        $("#formModalpopupAds").modal();
+    }, 10000);
+
+    $(".owl-carousel-section1").owlCarousel({
+        loop: true,
+        margin: 15,
+        items: 2,
+        lazyLoad: true,
+        dots: false,
+        itemsMobile: [320, 2],
+        nav: true,
+        navText: [
+            '<img src="images/ic_previous_1.png"/>',
+            '<img src="images/ic_next.png"/>',
+        ],
+        responsive: {
+            0: {
+                items: 1,
+            },
+            320: {
+                items: 1,
+                loop: true,
+                autoHeight: false,
+                nav: false,
+                dots: true,
+                margin: 5,
+            },
+            480: {
+                items: 1,
+                loop: true,
+                autoHeight: false,
+                nav: false,
+                dots: true,
+                margin: 0,
+            },
+            768: {
+                items: 1,
+                loop: true,
+                autoHeight: false,
+                nav: false,
+                dots: true,
+                margin: 5,
+            },
+            1000: {
+                items: 3,
+            },
+        },
+    });
+    $(".owl-carousel-review").owlCarousel({
+        loop: true,
+        margin: 15,
+        items: 2,
+        lazyLoad: true,
+        dots: true,
+        itemsMobile: [320, 2],
+        nav: false,
+        navText: [
+            '<img src="images/ic_previous_1.png"/>',
+            '<img src="images/ic_next.png"/>',
+        ],
+        responsive: {
+            0: {
+                items: 1,
+            },
+            320: {
+                items: 1,
+                loop: true,
+                autoHeight: true,
+                nav: false,
+                dots: true,
+                margin: 5,
+            },
+            480: {
+                items: 1,
+                loop: true,
+                autoHeight: true,
+                nav: false,
+                dots: true,
+                margin: 0,
+            },
+            768: {
+                items: 1,
+                loop: true,
+                autoHeight: true,
+                nav: false,
+                dots: true,
+                margin: 5,
+            },
+            1000: {
+                items: 1,
+            },
+        },
+    });
+    $(".owl-carousel-exp-center").owlCarousel({
+        loop: true,
+        margin: 15,
+        items: 2,
+        lazyLoad: true,
+        dots: false,
+        itemsMobile: [320, 2],
+        nav: true,
+        navText: [
+            '<img src="images/ic_previous_1.png" alt="previous arrow"/>',
+            '<img src="images/ic_next.png" alt="next arrow"/>',
+        ],
+        responsive: {
+            0: {
+                items: 1,
+            },
+            320: {
+                items: 1,
+                loop: true,
+                autoHeight: true,
+                nav: false,
+                dots: true,
+                margin: 5,
+            },
+            480: {
+                items: 1,
+                loop: true,
+                autoHeight: true,
+                nav: false,
+                dots: true,
+                margin: 0,
+            },
+            768: {
+                items: 1,
+                loop: true,
+                autoHeight: true,
+                nav: false,
+                dots: true,
+                margin: 5,
+            },
+            1000: {
+                items: 3,
+            },
+        },
+    });
+    $(".owl-carousel-adwards").owlCarousel({
+        loop: true,
+        margin: 15,
+        items: 2,
+        autoplay: true,
+        autoplayTimeout: 1000,
+        lazyLoad: true,
+        dots: true,
+        itemsMobile: [320, 2],
+        nav: false,
+        navText: [
+            '<img src="images/ic_previous_1.png"/>',
+            '<img src="images/ic_next.png"/>',
+        ],
+        responsive: {
+            0: {
+                items: 1,
+            },
+            320: {
+                items: 1,
+                loop: true,
+                autoHeight: true,
+                nav: false,
+                dots: true,
+                margin: 5,
+            },
+            480: {
+                items: 2,
+                loop: true,
+                autoHeight: true,
+                nav: false,
+                dots: true,
+                margin: 0,
+            },
+            768: {
+                items: 3,
+                loop: true,
+                autoHeight: true,
+                nav: false,
+                dots: true,
+                margin: 5,
+            },
+            1000: {
+                items: 4,
+            },
+        },
+    });
+    if ($(window).width() < 767) {
+        $(window).scroll(function() {
+            if ($(window).scrollTop() > 0) {
+                $(".footer-stickey-mobile").show();
+            } else {
+                $(".footer-stickey-mobile").show();
+            }
+        });
+    }
+    $.validator.addMethod(
+        "pattern",
+        function(value, element, param) {
+            if (this.optional(element)) {
+                return true;
+            }
+            if (typeof param === "string") {
+                param = new RegExp("^(?:" + param + ")$");
+            }
+            return param.test(value);
+        },
+        "Invalid format."
+    );
+    // $(".form-text-section").hide(300);
+    // $(".form-terms-cond").hide(300);
+    // $("input[name='PropertyType[]'], input[name='your-city']").on("change", function() {
+    //     if ($(this).val() !== "" && $("input[name='your-city']").is(":checked") && $(
+    //             "input[name='PropertyType[]']").is(":checked") == true) {
+    //         $(".form-text-section").show(300);
+    //         $(".submit-wraper, .form-terms-cond").show(300);
+    //     }
+    // });
+    $("#popup-phone").on("keypress keydown keyup", function() {
+        var phone_ext = $("#phone-no-ext").val();
+        if (phone_ext == "+91") {
+            var value = $(".mobile-phone-ext:input[type='tel']").val();
+            if (
+                $(".mobile-phone-ext:input[type='tel']").val() !== "" &&
+                value.length == 10
+            ) {
+                $("#text-form-message-phone").text(
+                    "Do pick up when we call. Our numbers start with 080"
+                );
+                $("#text-form-message-phone").removeClass("error-msg");
+            } else if (
+                $(".mobile-phone-ext:input[type='tel']").val() !== "" &&
+                value.length >= 4 &&
+                value.length <= 11
+            ) {
+                $("#text-form-message-phone").text("Enter a valid mobile phone number");
+                $("#text-form-message-phone").addClass("error-msg");
+            }
+        }
+    });
+
+});
+</script>
+
+
+
+
 
 
 
