--- a/index.html
+++ b/index.html
@@ -35,20 +35,13 @@
     <link rel="icon" type="image/png" href="assets/images/logo/3.png">    <!-- Google tag (gtag.js) -->
 
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.0/css/all.min.css" rel="stylesheet">
-    <link href="lib/flaticon/font/flaticon.css" rel="stylesheet">
-    <link href="lib/animate/animate.min.css" rel="stylesheet">
-    <link href="lib/owlcarousel/assets/owl.carousel.min.css" rel="stylesheet">
-    <link href="lib/lightbox/css/lightbox.min.css" rel="stylesheet">
-    <link href="lib/slick/slick.css" rel="stylesheet">
-    <link href="lib/owlcarousel/assets/owl.carousel.min.css" rel="stylesheet">
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-2GFX644REZ"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
+   
 
-  gtag('config', 'G-2GFX644REZ');
-</script>
+<!-- Libraries Stylesheet -->
+<link href="lib/animate/animate.min.css" rel="stylesheet" />
+<link href="lib/owlcarousel/assets/owl.carousel.min.css" rel="stylesheet" />
+<link href="lib/tempusdominus/css/tempusdominus-bootstrap-4.min.css" rel="stylesheet" />
+
   </head>
   <body>
   <div class="page-loader">
@@ -305,6 +298,28 @@
 
 
 
+<div class="services-btn" >
+  <h3 class="text-center p-1">SKIN TREATMENT</h3>
+  <div class="container-fluid bg-pricing">
+    <div class="container-xxl">
+      <div class="row">
+       
+        <div class="col-lg-12 pt-2 pb-lg-5">
+          <div class="pricing-text bg-light p-4 p-lg-5 my-lg-5">
+            <div class="owl-carousel pricing-carousel">
+              <div class="bg-white">
+               <img src="assets/images/livingroom/074f643c-eb8d-4b4f-a645-a88cbfe92834.jpg" alt="">
+              </div>
+              <div class="bg-white">
+              <img src="assets/images/livingroom/0508025f-4aa8-4f85-af97-c3a393903683.jpg" alt="">
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
 
 
 
@@ -312,254 +327,6 @@
 
 
 
-
-<script>
-  
-//new
-
-$(document).ready(function() {
-    setTimeout(function() {
-        $("#formModalpopupAds").modal();
-    }, 10000);
-
-    $(".owl-carousel-section1").owlCarousel({
-        loop: true,
-        margin: 15,
-        items: 2,
-        lazyLoad: true,
-        dots: false,
-        itemsMobile: [320, 2],
-        nav: true,
-        navText: [
-            '<img src="images/ic_previous_1.png"/>',
-            '<img src="images/ic_next.png"/>',
-        ],
-        responsive: {
-            0: {
-                items: 1,
-            },
-            320: {
-                items: 1,
-                loop: true,
-                autoHeight: false,
-                nav: false,
-                dots: true,
-                margin: 5,
-            },
-            480: {
-                items: 1,
-                loop: true,
-                autoHeight: false,
-                nav: false,
-                dots: true,
-                margin: 0,
-            },
-            768: {
-                items: 1,
-                loop: true,
-                autoHeight: false,
-                nav: false,
-                dots: true,
-                margin: 5,
-            },
-            1000: {
-                items: 3,
-            },
-        },
-    });
-    $(".owl-carousel-review").owlCarousel({
-        loop: true,
-        margin: 15,
-        items: 2,
-        lazyLoad: true,
-        dots: true,
-        itemsMobile: [320, 2],
-        nav: false,
-        navText: [
-            '<img src="images/ic_previous_1.png"/>',
-            '<img src="images/ic_next.png"/>',
-        ],
-        responsive: {
-            0: {
-                items: 1,
-            },
-            320: {
-                items: 1,
-                loop: true,
-                autoHeight: true,
-                nav: false,
-                dots: true,
-                margin: 5,
-            },
-            480: {
-                items: 1,
-                loop: true,
-                autoHeight: true,
-                nav: false,
-                dots: true,
-                margin: 0,
-            },
-            768: {
-                items: 1,
-                loop: true,
-                autoHeight: true,
-                nav: false,
-                dots: true,
-                margin: 5,
-            },
-            1000: {
-                items: 1,
-            },
-        },
-    });
-    $(".owl-carousel-exp-center").owlCarousel({
-        loop: true,
-        margin: 15,
-        items: 2,
-        lazyLoad: true,
-        dots: false,
-        itemsMobile: [320, 2],
-        nav: true,
-        navText: [
-            '<img src="images/ic_previous_1.png" alt="previous arrow"/>',
-            '<img src="images/ic_next.png" alt="next arrow"/>',
-        ],
-        responsive: {
-            0: {
-                items: 1,
-            },
-            320: {
-                items: 1,
-                loop: true,
-                autoHeight: true,
-                nav: false,
-                dots: true,
-                margin: 5,
-            },
-            480: {
-                items: 1,
-                loop: true,
-                autoHeight: true,
-                nav: false,
-                dots: true,
-                margin: 0,
-            },
-            768: {
-                items: 1,
-                loop: true,
-                autoHeight: true,
-                nav: false,
-                dots: true,
-                margin: 5,
-            },
-            1000: {
-                items: 3,
-            },
-        },
-    });
-    $(".owl-carousel-adwards").owlCarousel({
-        loop: true,
-        margin: 15,
-        items: 2,
-        autoplay: true,
-        autoplayTimeout: 1000,
-        lazyLoad: true,
-        dots: true,
-        itemsMobile: [320, 2],
-        nav: false,
-        navText: [
-            '<img src="images/ic_previous_1.png"/>',
-            '<img src="images/ic_next.png"/>',
-        ],
-        responsive: {
-            0: {
-                items: 1,
-            },
-            320: {
-                items: 1,
-                loop: true,
-                autoHeight: true,
-                nav: false,
-                dots: true,
-                margin: 5,
-            },
-            480: {
-                items: 2,
-                loop: true,
-                autoHeight: true,
-                nav: false,
-                dots: true,
-                margin: 0,
-            },
-            768: {
-                items: 3,
-                loop: true,
-                autoHeight: true,
-                nav: false,
-                dots: true,
-                margin: 5,
-            },
-            1000: {
-                items: 4,
-            },
-        },
-    });
-    if ($(window).width() < 767) {
-        $(window).scroll(function() {
-            if ($(window).scrollTop() > 0) {
-                $(".footer-stickey-mobile").show();
-            } else {
-                $(".footer-stickey-mobile").show();
-            }
-        });
-    }
-    $.validator.addMethod(
-        "pattern",
-        function(value, element, param) {
-            if (this.optional(element)) {
-                return true;
-            }
-            if (typeof param === "string") {
-                param = new RegExp("^(?:" + param + ")$");
-            }
-            return param.test(value);
-        },
-        "Invalid format."
-    );
-    // $(".form-text-section").hide(300);
-    // $(".form-terms-cond").hide(300);
-    // $("input[name='PropertyType[]'], input[name='your-city']").on("change", function() {
-    //     if ($(this).val() !== "" && $("input[name='your-city']").is(":checked") && $(
-    //             "input[name='PropertyType[]']").is(":checked") == true) {
-    //         $(".form-text-section").show(300);
-    //         $(".submit-wraper, .form-terms-cond").show(300);
-    //     }
-    // });
-    $("#popup-phone").on("keypress keydown keyup", function() {
-        var phone_ext = $("#phone-no-ext").val();
-        if (phone_ext == "+91") {
-            var value = $(".mobile-phone-ext:input[type='tel']").val();
-            if (
-                $(".mobile-phone-ext:input[type='tel']").val() !== "" &&
-                value.length == 10
-            ) {
-                $("#text-form-message-phone").text(
-                    "Do pick up when we call. Our numbers start with 080"
-                );
-                $("#text-form-message-phone").removeClass("error-msg");
-            } else if (
-                $(".mobile-phone-ext:input[type='tel']").val() !== "" &&
-                value.length >= 4 &&
-                value.length <= 11
-            ) {
-                $("#text-form-message-phone").text("Enter a valid mobile phone number");
-                $("#text-form-message-phone").addClass("error-msg");
-            }
-        }
-    });
-
-});
-</script>
 
 
 
@@ -2269,16 +2036,8 @@ $(document).ready(function() {
 
     
 
-<script
-      src="https://code.jquery.com/jquery-3.7.1.min.js"
-      integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo="
-      crossorigin="anonymous"
-    ></script>
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
-      crossorigin="anonymous"
-    ></script>
+  <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.bundle.min.js"></script>
     <script src="assets/js/script.js"></script>
     <a href="javascript:void(0);" id="backToTop" class="back-to-top">
       <i class="arrow"></i><i class="arrow"></i>
@@ -2381,6 +2140,15 @@ window.onload = function () {
     $(this).toggleClass("opened");
   });
 })(jQuery);
+
 </script>
+<script src="lib/easing/easing.min.js"></script>
+<script src="lib/waypoints/waypoints.min.js"></script>
+<script src="lib/counterup/counterup.min.js"></script>
+<script src="lib/owlcarousel/owl.carousel.min.js"></script>
+<script src="lib/tempusdominus/js/moment.min.js"></script>
+<script src="lib/tempusdominus/js/moment-timezone.min.js"></script>
+<script src="lib/tempusdominus/js/tempusdominus-bootstrap-4.min.js"></script>
+<script src="assets/js/main.js"></script>
   </body>
 </html>
