--- a/index.html
+++ b/index.html
@@ -299,7 +299,7 @@
 
 
 <div class="services-btn" >
-  <h3 class="text-center p-1">SKIN TREATMENT</h3>
+  <h3 class="text-center p-1">DESIGNS</h3>
   <div class="container-fluid bg-pricing">
     <div class="container-xxl">
       <div class="row">
