--- a/index.html
+++ b/index.html
@@ -341,7 +341,7 @@
   </div>
   
   <div class="right-column">
-    <div class="scroll-container">
+    <div class=" owl-carousel pricing-carousel">
       <!-- Image items -->
       <div class="scroll-item">
         <img src="images/pooja units/3.png" alt="Image 1">
@@ -468,14 +468,14 @@
   }
 
   /* Keyframes for slow right to left scroll */
-  @keyframes scroll-right-left {
+  /* @keyframes scroll-right-left {
     0% {
       transform: translateX(100%);
     }
     100% {
       transform: translateX(-100%);
     }
-  }
+  } */
 
   /* Responsive Design: For Mobile */
   @media screen and (max-width: 768px) {
