--- a/index.html
+++ b/index.html
@@ -305,13 +305,19 @@
       <div class="row">
        
         <div class="col-lg-12 pt-2 pb-lg-5">
-          <div class="pricing-text bg-light p-4 p-lg-5 my-lg-5">
+          <div class="pricing-text bg-light p-1 p-lg-2 my-lg-5">
             <div class="owl-carousel pricing-carousel">
               <div class="bg-white">
                <img src="assets/images/livingroom/074f643c-eb8d-4b4f-a645-a88cbfe92834.jpg" alt="">
+               <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Excepturi, asperiores quos nesciunt reiciendis praesentium vero, magnam voluptatem illo doloribus atque animi.</p>
               </div>
               <div class="bg-white">
               <img src="assets/images/livingroom/0508025f-4aa8-4f85-af97-c3a393903683.jpg" alt="">
+              <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Earum veniam quis numquam, sed ad aut ratione accusantium? Dolores fuga iusto quod corrupti rerum numquam? Laborum quibusdam cumque sunt voluptate totam.</p>
+              </div>
+              <div class="bg-white">
+              <img src="assets/images/livingroom/0b3206ed-509c-47f4-b81a-698911059425.jpg" alt="">
+              <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Earum veniam quis numquam, sed ad aut ratione accusantium? Dolores fuga iusto quod corrupti rerum numquam? Laborum quibusdam cumque sunt voluptate totam.</p>
               </div>
             </div>
           </div>
@@ -341,7 +347,7 @@
   </div>
   
   <div class="right-column">
-    <div class=" owl-carousel pricing-carousel">
+    <div class=" owl-carousel services">
       <!-- Image items -->
       <div class="scroll-item">
         <img src="images/pooja units/3.png" alt="Image 1">
@@ -412,6 +418,33 @@
 </div>
 
 <style>
+  .pricing-carousel.owl-carousel .owl-nav.disabled{
+display: block;
+  }
+  .pricing-carousel.owl-carousel .owl-nav.disabled{
+position: absolute;
+top: 40%;
+display: flex;
+justify-content: space-between;
+width: 100%;
+  }
+  .pricing-carousel.owl-carousel .owl-nav{
+position: absolute;
+top: 40%;
+display: flex;
+justify-content: space-between;
+width: 100%;
+  }
+  .pricing-carousel.owl-carousel .owl-nav.disabled .owl-prev,.pricing-carousel.owl-carousel .owl-nav.disabled .owl-next{
+background-color: #D49826;
+padding: 0.5rem;
+color: white;
+  }
+  .pricing-carousel.owl-carousel .owl-nav .owl-prev,.pricing-carousel.owl-carousel .owl-nav .owl-next{
+    background-color: #D49826;
+padding: 0.5rem;
+color: white;
+  }
   /* Main Section layout */
   .section {
     display: flex;
