--- a/packages.html
+++ b/packages.html
@@ -200,7 +200,7 @@
 
 
       <!-- Section Title -->
-<div class="container package-title mt-4 text-center">
+<div class="container package-title mt-4 text-center ">
 
   <h2 class="text-center">Explore Our Interior Packages</h2>
   <p class="text-center">Discover our range of interior packages designed for different types of homes.</p>
@@ -225,7 +225,7 @@
           <img class="backicons" src="assets/images/icons/plywood.png" />
         </div>
         <div>
-          <h5 class="plan-header pl-3 pt-4"></i>GURJAN PLY,710 BWP</h5>
+          <h5 class="plan-header  pt-4"></i>GURJAN PLY,710 BWP</h5>
         </div>
       </div>
 
@@ -284,17 +284,17 @@
           <img class="backicons" src="assets/images/icons/tvunits.png" />
         </div>
         <div>
-          <h4 class="plan-header pl-3">TV UNIT</h4>
+          <h4 class="plan-header ">TV UNIT</h4>
         </div>
       </div>
 
-      <div class="d-flex flex-row justify-content-start pl-5">
+      <div class="d-flex flex-row justify-content-start ">
         <img class="rightssym" src="assets/images/icons/rights.png" />
-        <p class=" pl-1">Upto 7 "ft" width,height upto lintel level wooden with glass doors.</p>
+        <p >Upto 7 "ft" width,height upto lintel level wooden with glass doors.</p>
       </div>
 
       <div class="d-flex flex-row justify-content-start pt-2">
-        <div class="pb-3 pl-2">
+        <div class="pb-3 ">
           <img class="backicons" src="assets/images/icons/crockey.png" />
         </div>
         <div>
@@ -304,7 +304,7 @@
       </div>
 
 
-      <div class="d-flex flex-row justify-content-start pl-5">
+      <div class="d-flex flex-row justify-content-start">
         <img class="rightssym" src="assets/images/icons/rights.png" />
         <p class=" pl-1">Upto 4 "ft" width,height upto lintel level wooden with glass doors.</p>
       </div>
@@ -2163,6 +2163,12 @@
   width:32px;
   padding: 2px;
   border-radius: 2px;
+  margin-right: 5px;
+}
+.buy-btn {
+  background-color: black;
+  padding:10px;
+  border-radius: 5px;
 }
 
   /* Responsive for smaller screens */
@@ -2220,7 +2226,7 @@
       
 
 <footer>
-    <div class="p-5" style="background-color: black;">
+    <div class="p-5 " style="background-color: black;">
         <div class="row">
       <div class="col-xl-4 col-lg-4 col-md-12 col-sm-12">
         <div class="footer-logo">
