--- a/contact.html
+++ b/contact.html
@@ -50,11 +50,11 @@
     </a>
   </div>
   <div class="social-icons">
-    <a href="https://facebook.com" target="_blank"><i class="fab fa-facebook-f"></i></a>
-    <a href="https://instagram.com" target="_blank"><i class="fab fa-instagram"></i></a>
-    <a href="https://youtube.com" target="_blank"><i class="fab fa-youtube"></i></a>
-    <a href="https://twitter.com" target="_blank"><i class="fab fa-twitter"></i></a>
-    <a href="https://linkedin.com" target="_blank"><i class="fab fa-linkedin-in"></i></a>
+    <a href="https://www.facebook.com/profile.php?id=61566746447096" target="_blank"><i class="fab fa-facebook-f"></i></a>
+    <a href="https://www.instagram.com/sr_interiors3/" target="_blank"><i class="fab fa-instagram"></i></a>
+    <a href="https://www.youtube.com/@SRInteriors-w7z" target="_blank"><i class="fab fa-youtube"></i></a>
+    <a href="https://x.com/SR_Interiors3" target="_blank"><i class="fab fa-twitter"></i></a>
+    <a href="https://www.linkedin.com/in/sr-interiors-ba3a61332/" target="_blank"><i class="fab fa-linkedin-in"></i></a>
   </div>
 </div>
 
@@ -480,8 +480,8 @@
             </ul>
             <div class="social">
               <a href="https://www.facebook.com/srdesignstudio?mibextid=kFxxJD" target="_b"><i class="bi bi-facebook"></i></a>
-              <a href="#"><i class="bi bi-twitter"></i></a>
-              <a href="#"><i class="bi bi-linkedin"></i></a> 
+              <a href="https://x.com/SR_Interiors3"><i class="bi bi-twitter"></i></a>
+              <a href="https://www.linkedin.com/in/sr-interiors-ba3a61332/"><i class="bi bi-linkedin"></i></a> 
               <a href="https://www.instagram.com/studiosr/?fbclid=IwAR1Z0oQfiFNVHoCtUgxBlQmEa7Dz3uW1ffcGmXIPwkrE9noH_6YzKQxozXY" target="_b"><i class="bi bi-instagram"></i></a>
             </div>
           </div>
