--- a/index.html
+++ b/index.html
@@ -1202,7 +1202,8 @@ color: white;
           align-items: center;
           justify-content: center;
           height: 130%;
-    
+    padding-top: 20px;
+    padding-bottom: 20px;
           text-align: center;
           color: #fff;
       }
