--- a/index.html
+++ b/index.html
@@ -1132,7 +1132,7 @@ color: white;
 
       .content h2 {
           font-size: 1.4rem; /* Decrease font size for mobile */
-          margin-bottom: 15px;
+          margin-top: 15px;
       }
 
       .form-bubble-wrapper {
