--- a/about.html
+++ b/about.html
@@ -190,7 +190,7 @@
             <ol class="breadcrumb">
               <li class="breadcrumb-item"><a href="index.html">Home</a></li>
               <li class="breadcrumb-item active" aria-current="page">
-                Contact
+                ABOUT
               </li>
             </ol>
           </div>
