--- a/index.html
+++ b/index.html
@@ -1186,27 +1186,43 @@ color: white;
       <!-- First Container: Bottom to Top Scroll -->
       <div class="container">
           <div class="scroll-images">
-              <img src="images/wordrobes/1.png" alt="Image 1">
-              <img src="images/pooja units/2.png" alt="Image 2">
-              <img src="images/residence/kitchensss/12.png" alt="Image 3">
-              <img src="images/tvunits/11.png" alt="Image 4">
-              <img src="images/bedrooms/3.png" alt="Image 5">
-              <img src="images/livingrooms/5.png" alt="Image 6">
-              <img src="images/residence/kitchensss/16.png" alt="Image 7">
-              <img src="images/livingrooms/19.png" alt="Image 8">
+            <a href="images/wordrobes/1.png" data-lightbox="mygallery" data-title="Image 1">
+              <img src="images/wordrobes/1.png" alt="Image 1"></a>
+              <a href="images/pooja units/2.png" data-lightbox="mygallery" data-title="Image 1">
+              <img src="images/pooja units/2.png" alt="Image 2"></a>
+              <a href="images/residence/kitchensss/12.png" data-lightbox="mygallery" data-title="Image 1">
+              <img src="images/residence/kitchensss/12.png" alt="Image 3"></a>
+              <a href="images/tvunits/11.png" data-lightbox="mygallery" data-title="Image 1">
+              <img src="images/tvunits/11.png" alt="Image 4"></a>
+              <a href="images/bedrooms/3.png" data-lightbox="mygallery" data-title="Image 1">
+              <img src="images/bedrooms/3.png" alt="Image 5"></a>
+              <a href="images/livingrooms/5.png" data-lightbox="mygallery" data-title="Image 1">
+              <img src="images/livingrooms/5.png" alt="Image 6"></a>
+              <a href="images/residence/kitchensss/16.png" data-lightbox="mygallery" data-title="Image 1">
+              <img src="images/residence/kitchensss/16.png" alt="Image 7"></a>
+              <a href="images/livingrooms/19.png" data-lightbox="mygallery" data-title="Image 1">
+              <img src="images/livingrooms/19.png" alt="Image 8"></a>
           </div>
       </div>
       <!-- Second Container: Top to Bottom Scroll -->
       <div class="container">
           <div class="scroll-images scroll-up">
-              <img src="images/bedrooms/6.png" alt="Image 1">
-              <img src="images/livingrooms/13.png" alt="Image 2">
-              <img src="images/residence/kitchensss/10.png" alt="Image 3">
-              <img src="images/livingrooms/12.png" alt="Image 4">
-              <img src="images/tvunits/6.png" alt="Image 5">
-              <img src="images/wordrobes/1.png" alt="Image 6">
-              <img src="images/residence/kitchensss/23.png" alt="Image 7">
-              <img src="images/wordrobes/21.png" alt="Image 8">
+            <a href="images/bedrooms/6.png" data-lightbox="mygallery" data-title="Image 1">
+              <img src="images/bedrooms/6.png" alt="Image 1"></a>
+              <a href="images/livingrooms/13.png" data-lightbox="mygallery" data-title="Image 1">
+              <img src="images/livingrooms/13.png" alt="Image 2"></a>
+              <a href="images/residence/kitchensss/10.png" data-lightbox="mygallery" data-title="Image 1">
+              <img src="images/residence/kitchensss/10.png" alt="Image 3"></a>
+              <a href="images/livingrooms/12.png" data-lightbox="mygallery" data-title="Image 1">
+              <img src="images/livingrooms/12.png" alt="Image 4"></a>
+              <a href="images/tvunits/6.png" data-lightbox="mygallery" data-title="Image 1">
+              <img src="images/tvunits/6.png" alt="Image 5"></a>
+              <a href="images/wordrobes/1.png" data-lightbox="mygallery" data-title="Image 1">
+              <img src="images/wordrobes/1.png" alt="Image 6"></a>
+              <a href="images/residence/kitchensss/23.png" data-lightbox="mygallery" data-title="Image 1">
+              <img src="images/residence/kitchensss/23.png" alt="Image 7"></a>
+              <a href="images/wordrobes/21.png" data-lightbox="mygallery" data-title="Image 1">
+              <img src="images/wordrobes/21.png" alt="Image 8"></a>
           </div>
       </div>
   </div>
@@ -1787,20 +1803,6 @@ color: white;
                     </strong>
                   </p>
                 </div>
-
-
-                <div class="review-item review-background">
-                  <h4 class="reviewer-name text-white"><strong>
-                    MUTHINENI LATHA SREE</strong></h4>
-                  <div class="review-stars">&#9733; &#9733; &#9733; &#9733; &#9734;</div>
-                  <p class="review-text text-white fst-italic">
-                    <strong>
-                      Budget friendly,On time & fast delivery,one of the best
-                       services I had seen till now in hyderabad.thank you SR INTERIORS!!
-                    </strong>
-                  </p>
-                </div>
-
 
                 <!-- Add more reviews as needed -->
               </div>
