--- a/packages.html
+++ b/packages.html
@@ -274,9 +274,9 @@
 
  <!-- Tabs -->
  <div id="tabs">
-  <div class="tab" data-tab="2BHK">2BHK Packages</div>
-  <div class="tab" data-tab="3BHK">3BHK Packages</div>
-  <div class="tab" data-tab="Villa">Villa/Home Packages</div>
+  <div class="tab" data-tab="2BHK">2BHK </div>
+  <div class="tab" data-tab="3BHK">3BHK </div>
+  <div class="tab" data-tab="Villa">Villa/Home </div>
 </div>
 
 <!-- Tab Content -->
@@ -2432,7 +2432,7 @@
       }
 
       .package-box {
-          width: 80%;
+          width: 100%;
           margin-bottom: 20px;
       }
   }
