--- a/packages.html
+++ b/packages.html
@@ -2394,12 +2394,13 @@
 
   /* Package Box Styles */
   .package-box {
-      border: 1px solid #ddd;
+      border: 1px solid #0a0a0a;
       padding: 20px;
       width: 30%;
       box-sizing: border-box;
       text-align: center;
       box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
+      border-radius: 10px;
   }
 
   .package-box h3 {
@@ -2434,6 +2435,7 @@
       .package-box {
           width: 100%;
           margin-bottom: 20px;
+          border-radius: 10px;
       }
   }
 </style>
