--- a/index.html
+++ b/index.html
@@ -36,12 +36,15 @@
     <link rel="icon" type="image/png" href="assets/images/logo/3.png">    <!-- Google tag (gtag.js) -->
 
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.0/css/all.min.css" rel="stylesheet">
-   
+    <link rel="stylesheet" href="assets/css/style.css" />
+    <link rel="stylesheet" href="assets/css/responsive.css" />
 
 <!-- Libraries Stylesheet -->
 <link href="lib/animate/animate.min.css" rel="stylesheet" />
 <link href="lib/owlcarousel/assets/owl.carousel.min.css" rel="stylesheet" />
-<link href="lib/tempusdominus/css/tempusdominus-bootstrap-4.min.css" rel="stylesheet" />
+<!-- <link href="lib/tempusdominus/css/tempusdominus-bootstrap-4.min.css" rel="stylesheet" /> -->
+  <!-- Include Font Awesome for Icons -->
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet"/>
 
   </head>
   <body>
@@ -53,8 +56,7 @@
 
 
     <main class="bg-pattern">
-     <!-- Include Font Awesome for Icons -->
-<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet"/>
+   
 
 
 
@@ -196,6 +198,31 @@
     </div>
   </div>
 </nav>
+
+<style>
+  @media(max-width:992px){
+    .navbar-toggler{
+    background-color: #D19A23;
+  }
+  }
+ 
+  .cta-button {
+  background-color: #D19A23; /* Bright, attention-grabbing color */
+  color: white;
+  padding: 15px 25px;
+  text-align: center;
+  text-decoration: none;
+  border-radius: 5px;
+  font-size: 16px;
+ 
+  transition: background-color 0.3s ease;
+}
+
+.cta-button:hover {
+  background-color: #D19A23; /* Darker shade on hover */
+}
+
+</style>
 
 
 
@@ -2537,9 +2564,16 @@ color: white;
   </main>
 
     
-
-  <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.bundle.min.js"></script>
+  <script
+  src="https://code.jquery.com/jquery-3.7.1.min.js"
+  integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo="
+  crossorigin="anonymous"
+></script>
+<script
+  src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+  integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+  crossorigin="anonymous"
+></script>
     <script src="assets/js/script.js"></script>
     <a href="javascript:void(0);" id="backToTop" class="back-to-top">
       <i class="arrow"></i><i class="arrow"></i>
@@ -2642,7 +2676,6 @@ window.onload = function () {
     $(this).toggleClass("opened");
   });
 })(jQuery);
-
 </script>
 <script src="lib/easing/easing.min.js"></script>
 <script src="lib/waypoints/waypoints.min.js"></script>
