--- a/contact.html
+++ b/contact.html
@@ -361,8 +361,8 @@
                   </div>
                 </div>
               </div>
-              <div class="mt-5">
-                <img src="images/aboy2.png" class="inner-contact-img"/>
+              <div class="mt-5 d-none d-lg-block">
+                <img src="images/sdfb.png" class="inner-contact-img"/>
               </div>
             </div>
           </div>
