--- a/index.html
+++ b/index.html
@@ -990,11 +990,11 @@ color: white;
 
   
 
-
+<h3 class=" text-dark text-center pt-4 pb-3">Transform Your Space With The Best Interior Designers In Hyderabad</h3>
 <section class="fixed-background">
   <div class="overlay">
       <div class="content">
-          <h2 class=" text-dark">Transform Your Space With The Best Interior Designers In Hyderabad</h2>
+         
 
           <div class="form-bubble-wrapper">
               <div class="form-section">
