--- a/index.html
+++ b/index.html
@@ -990,7 +990,7 @@ color: white;
 
   
 
-<h3 class=" text-dark text-center pt-4 pb-3">Transform Your Space With The Best Interior Designers In Hyderabad</h3>
+<h4 class=" text-dark text-center pt-4 pb-3"><strong>Your Space With The Best Interior Designers</strong>  </h4>
 <section class="fixed-background">
   <div class="overlay">
       <div class="content">
@@ -1093,7 +1093,7 @@ color: white;
   }
 
   .form-section form label {
-      color: #fff;
+      color:black;
       margin-bottom: 5px;
       font-size: 16px;
       width: 180px;
@@ -1111,7 +1111,7 @@ color: white;
       padding: 10px 20px;
       background-color: #888;
       border: none;
-      color: #fff;
+      color: black;
       border-radius: 5px;
       cursor: pointer;
   }
@@ -1262,9 +1262,9 @@ color: white;
       position: relative;
       display: flex;
       flex-wrap: wrap; /* Allow wrapping for elements */
-      width: 90%;
+      width: 100%;
       padding: 20px;
-      overflow: hidden;
+      overflow: visible;
       border-radius: 10px;
   }
   .left {
@@ -1287,7 +1287,7 @@ color: white;
   }
   .container {
       width: 45%; /* Ensure containers take 45% of the width */
-      height: 500px;
+      height: 700px;
       overflow: hidden;
       position: relative;
   }
@@ -1360,7 +1360,7 @@ color: white;
 
       .container {
           width: 100%; /* Make images full width */
-          height: 300px; /* Adjust height for mobile */
+          height: 500px !important;  /* Adjust height for mobile */
       }
 
       .sectionproo::before {
@@ -1374,7 +1374,7 @@ color: white;
 
   @media (max-width: 480px) {
       .container {
-          height: 200px; /* Further reduce height for extra small screens */
+          height: 500px; /* Further reduce height for extra small screens */
       }
 
       .sectionproo::before {
@@ -1898,10 +1898,11 @@ color: white;
   }
 
   .form-section form label {
-      color: #fff;
+      color: black;
       margin-bottom: 5px;
       font-size: 16px;
       width: 180px; /* Increased width for labels */
+      font-weight: 500;
   }
 
   .form-section form input {
