--- a/index.html
+++ b/index.html
@@ -2560,6 +2560,14 @@ color: white;
       </div>
   
   </footer>   
+
+<!--whatsapp btn start-->
+<div class="whatsapp mr-3" id="whatsapp">
+  <a href="https://wa.me/+919963043888" target="_blank"><i class="bi bi-whatsapp"></i></a>
+</div>
+<!--whatsapp btn end-->
+
+ 
   
   </main>
 
@@ -2567,8 +2575,8 @@ color: white;
   <script
   src="https://code.jquery.com/jquery-3.7.1.min.js"
   integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo="
-  crossorigin="anonymous"
-></script>
+  crossorigin="anonymous">
+</script>
 <script
   src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
   integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
