--- a/residential-services.html
+++ b/residential-services.html
@@ -656,7 +656,13 @@
         </div>
       </div>
   
-  </footer>  
+  </footer> 
+  
+  <!--whatsapp btn start-->
+<div class="whatsapp mr-3" id="whatsapp">
+  <a href="https://wa.me/+919963043888" target="_blank"><i class="bi bi-whatsapp"></i></a>
+</div>
+<!--whatsapp btn end-->
 
 
   </main>
