--- a/about.html
+++ b/about.html
@@ -656,6 +656,12 @@
     
     </footer> 
 
+    <!--whatsapp btn start-->
+<div class="whatsapp mr-3" id="whatsapp">
+  <a href="https://wa.me/+919963043888" target="_blank"><i class="bi bi-whatsapp"></i></a>
+</div>
+<!--whatsapp btn end-->
+
 </main>
  
 
