--- a/contact.html
+++ b/contact.html
@@ -503,6 +503,12 @@
         </div>
     
     </footer> 
+
+    <!--whatsapp btn start-->
+<div class="whatsapp mr-3" id="whatsapp">
+  <a href="https://wa.me/+919963043888" target="_blank"><i class="bi bi-whatsapp"></i></a>
+</div>
+<!--whatsapp btn end-->
   
   </main>
  
