--- a/commercial-services.html
+++ b/commercial-services.html
@@ -329,7 +329,7 @@
 
 
         <!-- TV UNIT Image Gallery -->
-        <h3 class="text-center main-heading">Restarents</h3>
+        <h3 class="text-center main-heading">Restaurants</h3>
         <div class="image-gallery">
             <button class="prevButton nav-button">◀</button>
             <div class="image-container">
