--- a/index.html
+++ b/index.html
@@ -2331,7 +2331,9 @@ color: white;
 
 .gallery-bubble {
   margin: 0 10px;
-  padding: 10px;
+  height:40px;
+  padding: 6px;
+  width:40px;
   background-color: #e7e7e7;
   border-radius: 50%;
   cursor: pointer;
