--- a/about.html
+++ b/about.html
@@ -432,7 +432,9 @@
 
 .gallery-bubble {
   margin: 0 10px;
-  padding: 10px;
+  height:40px;
+  padding: 6px;
+  width:40px;
   background-color: #e7e7e7;
   border-radius: 50%;
   cursor: pointer;
@@ -642,7 +644,7 @@
 
   <div class="row copyright" style="background-color: black;">
     <div class="col-xl-8 col-lg-8 col-md-12 col-sm-12">
-      © 2024 SR INteriors. All rights reserved. Designed by:
+      © 2024 SR Interiors. All rights reserved. Designed by:
       <a href="https://www.thepatternscompany.com" target="_blank">The Patterns Company</a>
     </div>
     <div class="col-xl-4 col-lg-4 col-md-12 col-sm-12">
