--- a/commercial-services.html
+++ b/commercial-services.html
@@ -487,7 +487,7 @@
 
   <div class="row copyright" style="background-color: black;">
     <div class="col-xl-8 col-lg-8 col-md-12 col-sm-12">
-      © 2024 SR INteriors. All rights reserved. Designed by:
+      © 2024 SR Interiors. All rights reserved. Designed by:
       <a href="https://www.thepatternscompany.com" target="_blank">The Patterns Company</a>
     </div>
     <div class="col-xl-4 col-lg-4 col-md-12 col-sm-12">
