--- a/index.html
+++ b/index.html
@@ -48,11 +48,11 @@
 
   </head>
   <body>
-  <div class="page-loader">
+  <!-- <div class="page-loader">
       <div class="loader">
         <img src="assets/images/logo/3.png">
       </div>
-    </div>
+    </div> -->
 
 
     <main class="bg-pattern">
