--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css"
     />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="stylesheet" href="assets/css/style.css" />
     <link rel="stylesheet" href="assets/css/responsive.css" />
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" rel="stylesheet">
@@ -369,7 +370,12 @@
   border: 1px solid #000; /* Optional border */
   color: white;
 }
-
+.colo{
+  color:#D19A23;
+}
+.icoo{
+  color: #000;
+}
 </style>
 
 
@@ -379,7 +385,10 @@
 
 <!--pooja-->
 <div class="services-btn">
-  <h3 class="text-center p-1">Transform Your Space with Divine Pooja Units</h3>
+  <h4 class="text-center p-1 colo">
+    Transform Your Space with Divine Pooja Units 
+    <i class="fas fa-oil-can icoo"></i> <!-- Living room icon -->
+</h4>
 
   <div class="container-fluid bg-pricing">
     <div class="container-xxl">
@@ -456,7 +465,7 @@
 
 <!--Living Room-->
 <div class="services-btn">
-  <h3 class="text-center p-1">Design the Heart of Your Home: Stunning Living Rooms</h3>
+  <h4 class="text-center p-1">Design the Heart of Your Home: Stunning Living Rooms</h4>
 
   <div class="container-fluid bg-pricing">
     <div class="container-xxl">
@@ -534,7 +543,7 @@
 
 <!--Kitchens Room-->
 <div class="services-btn">
-  <h3 class="text-center p-1">Crafting Kitchens that Inspire Culinary Creativity</h3>
+  <h4 class="text-center p-1">Crafting Kitchens that Inspire Culinary Creativity</h4>
 
   <div class="container-fluid bg-pricing">
     <div class="container-xxl">
@@ -611,7 +620,7 @@
 
 <!--Bedroom Room-->
 <div class="services-btn">
-  <h3 class="text-center p-1">Create Your Perfect Retreat: Beautiful Bedrooms</h3>
+  <h4 class="text-center p-1">Create Your Perfect Retreat: Beautiful Bedrooms</h4>
 
   <div class="container-fluid bg-pricing">
     <div class="container-xxl">
@@ -689,7 +698,7 @@
 
 <!--Wardrobe Room-->
 <div class="services-btn pb-5">
-  <h3 class="text-center p-1">Stylish Wardrobes for Organized Living</h3>
+  <h4 class="text-center p-1">Stylish Wardrobes for Organized Living</h4>
 
   <div class="container-fluid bg-pricing">
     <div class="container-xxl">
