--- a/index.html
+++ b/index.html
@@ -465,7 +465,10 @@
 
 <!--Living Room-->
 <div class="services-btn">
-  <h4 class="text-center p-1">Design the Heart of Your Home: Stunning Living Rooms</h4>
+  <h4 class="text-center p-1 colo">
+    Design the Heart of Your Home: Stunning Living Rooms 
+    <i class="fas fa-couch icoo"></i> <!-- Couch icon added here -->
+  </h4>
 
   <div class="container-fluid bg-pricing">
     <div class="container-xxl">
@@ -543,8 +546,10 @@
 
 <!--Kitchens Room-->
 <div class="services-btn">
-  <h4 class="text-center p-1">Crafting Kitchens that Inspire Culinary Creativity</h4>
-
+  <h4 class="text-center p-1 colo">
+    Crafting Kitchens that Inspire Culinary Creativity 
+    <i class="fas fa-utensils icoo"></i> <!-- Kitchen icon (utensils) added here -->
+  </h4>
   <div class="container-fluid bg-pricing">
     <div class="container-xxl">
       <div class="row">
@@ -620,7 +625,10 @@
 
 <!--Bedroom Room-->
 <div class="services-btn">
-  <h4 class="text-center p-1">Create Your Perfect Retreat: Beautiful Bedrooms</h4>
+  <h4 class="text-center p-1 colo">
+    Create Your Perfect Retreat: Beautiful Bedrooms 
+    <i class="fas fa-bed icoo"></i> <!-- Bedroom icon (bed) added here -->
+  </h4>
 
   <div class="container-fluid bg-pricing">
     <div class="container-xxl">
@@ -698,8 +706,10 @@
 
 <!--Wardrobe Room-->
 <div class="services-btn pb-5">
-  <h4 class="text-center p-1">Stylish Wardrobes for Organized Living</h4>
-
+  <h4 class="text-center p-1 colo">
+    Stylish Wardrobes for Organized Living 
+    <i class="fas fa-archive icoo"></i> <!-- Wardrobe icon (closet alternative) added here -->
+  </h4>
   <div class="container-fluid bg-pricing">
     <div class="container-xxl">
       <div class="row">
@@ -999,7 +1009,7 @@ color: white;
 
   
 
-<h4 class=" text-dark text-center pt-4 pb-3"><strong>Your Space With The Best Interior Designers</strong>  </h4>
+<h4 class=" text-dark text-center pt-4 pb-3 icoo"><strong>Your Space With The Best Interior Designers</strong>  </h4>
 <section class="fixed-background">
   <div class="overlay">
       <div class="content">
