--- a/index.html
+++ b/index.html
@@ -1009,7 +1009,7 @@ color: white;
 
   
 
-<h4 class=" text-dark text-center pt-4 pb-3 icoo"><strong>Your Space With The Best Interior Designers</strong>  </h4>
+<h4 class=" text-dark text-center pt-4 pb-3 "><strong>Your Space With The Best Interior Designers</strong>  </h4>
 <section class="fixed-background">
   <div class="overlay">
       <div class="content">
@@ -1029,7 +1029,12 @@ color: white;
 
                       <div class="">
                           <button type="submit">Submit</button>
+
+
+                          
                       </div>
+
+
                   </form>
               </div>
 
