--- a/index.html
+++ b/index.html
@@ -1298,7 +1298,7 @@ color: white;
       justify-content: center;
       align-items: center;
       padding: 20px;
-      font-size: 50px;
+      font-size: 40px;
       font-weight: bold;
       position: relative;
       z-index: 2;
@@ -1423,7 +1423,7 @@ color: white;
 
 
 
-    <section class="milestone-section section-size mt-space mb-space " style="background-color:black ;  border-radius: 10px;">
+    <section class="milestone-section p-5 mt-space mb-space " style="background-color:black ;  border-radius: 10px;">
       <div class="row" >
 
         <div class="col-xl-6 col-lg-5 col-md-12 col-sm-12" >
@@ -1457,10 +1457,10 @@ color: white;
                 </div>
               </div> -->
 
-              <div class="milestone-btn-part">
+              <!-- <div class="milestone-btn-part">
                 <a href="residential-services.html" class="main-clk-btn">
                   Continue</a>
-              </div>
+              </div> -->
             </div>
           </div>
         </div>
@@ -1495,10 +1495,10 @@ color: white;
                 </div>
               </div> -->
 
-              <div class="milestone-btn-part" >
+              <!-- <div class="milestone-btn-part" >
                 <a href="residential-services.html" class="main-clk-btn">
                   Continue</a>
-              </div>
+              </div> -->
             </div>
           </div>
         </div>
