--- a/index.html
+++ b/index.html
@@ -717,32 +717,32 @@
           <div class="pricing-text  p-1 ">
             <div class="owl-carousel pricing-carousel">
               <div class="">
-                <a href="images/wardrobe-hero/3.png" data-lightbox="mygallery" data-title="Image 1">
-               <img class="imgsss" src="images/wardrobe-hero/3.png" alt=""></a>
+                <a href="images/wordrobereplace/1.pngg" data-lightbox="mygallery" data-title="Image 1">
+               <img class="imgsss" src="images/wordrobereplace/2.png" alt=""></a>
                <p class="text-center"><strong>Custom Wardrobes Tailored to Your Needs</strong>
                </p>
               </div>
               <div class="">
-                <a href="images/wardrobe-hero/4.png" data-lightbox="mygallery" data-title="Image 1">
-              <img class="imgsss" src="images/wardrobe-hero/4.png" alt=""></a>
+                <a href="images/wordrobereplace/2.png" data-lightbox="mygallery" data-title="Image 1">
+              <img class="imgsss" src="images/wordrobereplace/3.png" alt=""></a>
               <p class="text-center"><strong>Maximize Space with Functional Wardrobe Designs</strong>
               </p>
               </div>
               <div class="">
-                <a href="images/wardrobe-hero/5.png" data-lightbox="mygallery" data-title="Image 1">
-              <img class="imgsss" src="images/wardrobe-hero/5.png" alt=""></a>
+                <a href="images/wordrobereplace/3.png" data-lightbox="mygallery" data-title="Image 1">
+              <img class="imgsss" src="images/wordrobereplace/4.png" alt=""></a>
               <p class="text-center"><strong>Elegant Storage Solutions for a Clutter-Free Life</strong>
                </p>
               </div>
               <div class="">
-                <a href="images/wardrobe-hero/1.png" data-lightbox="mygallery" data-title="Image 1">
-                <img class="imgsss" src="images/wardrobe-hero/1.png" alt=""></a>
+                <a href="images/wordrobereplace/4.png" data-lightbox="mygallery" data-title="Image 1">
+                <img class="imgsss" src="images/wordrobereplace/1.png" alt=""></a>
                 <p class="text-center"><strong>Wardrobes that Combine Style and Practicality</strong> 
                  </p>
                 </div>
                 <div class="">
-                  <a href="images/wardrobe-hero/2.png" data-lightbox="mygallery" data-title="Image 1">
-                  <img class="imgsss" src="images/wardrobe-hero/2.png" alt=""></a>
+                  <a href="images/wordrobereplace/5.png" data-lightbox="mygallery" data-title="Image 1">
+                  <img class="imgsss" src="images/wordrobereplace/5.png" alt=""></a>
                   <p class="text-center"><strong>Organized Wardrobes for Effortless Living</strong>
                    </p>
                   </div>
