--- a/contact.html
+++ b/contact.html
@@ -314,7 +314,7 @@
                   </svg>
                   <div>
                     <h4 class="text-dark">Phone Number</h4>
-                    <h6><a href="tel:+919985599655" style="color: #afafaf;">+91 9963043888</a></h6>
+                    <h6><a href="tel:+91 9963043888" style="color: #afafaf;">+91 9963043888</a></h6>
                   </div>
                 </div>
                 <div>
