--- a/project.html
+++ b/project.html
@@ -368,10 +368,10 @@
         </li>
       </ul>
       <div class="social">
-        <a href="https://www.facebook.com/srdesignstudio?mibextid=kFxxJD" target="_b"><i class="bi bi-facebook"></i></a>
-   <a href="#"><i class="bi bi-twitter"></i></a>
-        <a href="#"><i class="bi bi-linkedin"></i></a> 
-        <a href="https://www.instagram.com/studiosr/?fbclid=IwAR1Z0oQfiFNVHoCtUgxBlQmEa7Dz3uW1ffcGmXIPwkrE9noH_6YzKQxozXY" target="_b"><i class="bi bi-instagram"></i></a>
+        <a href="https://www.facebook.com/profile.php?id=61566746447096" target="_b"><i class="bi bi-facebook"></i></a>
+        <a href="https://x.com/SR_Interiors3"><i class="bi bi-twitter"></i></a>
+        <a href="https://www.linkedin.com/in/sr-interiors-ba3a61332/"><i class="bi bi-linkedin"></i></a> 
+        <a href="https://www.instagram.com/sr_interiors3/" target="_b"><i class="bi bi-instagram"></i></a>
       </div>
     </div>
   </div>  </div>
