--- a/index.html
+++ b/index.html
@@ -2580,13 +2580,13 @@ color: white;
       © 2024 SR Interiors. All rights reserved. Designed by:
       <a href="https://www.thepatternscompany.com" target="_blank">The Patterns Company</a>
     </div>
-    <div class="col-xl-4 col-lg-4 col-md-12 col-sm-12">
+    <!-- <div class="col-xl-4 col-lg-4 col-md-12 col-sm-12">
       <a href="#"
           >Terms and conditions</a
         > &nbsp; | &nbsp;<a href="privacy-policy.html"
           >Privacy Policy</a
         >
-    </div>
+    </div> -->
   </div>
 
 </footer>    
